# vibrato-dict-ipa-neologd

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dictgen.sh
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs
