[package]
name = "vibrato-dict-ipa-neologd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
description = "A compiled mecab-ipadic-neologd dictionary for vibrato."
readme = "README.md"
repository = "https://github.com/akiomik/vibrato-dict-ipa-neologd"
homepage = "https://github.com/akiomik/vibrato-dict-ipa-neologd"
keywords = ["dictionary", "tokenizer", "tokenization", "morphological-analysis", "nlp"]
categories = ["text-processing"]
include = ["src", "tmp/mecab-ipadic-neologd.dic.zst", "LICENSE", "README.md"]

[dependencies]
ruzstd = "0.5.0"
vibrato = "0.5.1"
